  NOTE: This release remove many deprecated features. 
  ---------------------------------------------------
  - remove DEPRECATED default_filter method(DBIx::Custom::Result).
  - remove DEPRECATED default_fetch_filter(DBIx::Custom).
  - remove DEPRECATED default_bind_filter(DBIx::Custom).
  - remove DEPRECATED DBIx::Custom::Query.
  - remove DEPRECATED DBIx::Custom::QueryBuilder.
  - remove DEPRECATED cache_method(DBIx::Custom).
  - remove DEPRECATED query_builder(DBIx::Custom).
  - remove DEPRECATED tag_parse(DBIx::Custom)
  - remove DBIX_CUSTOM_TAG_PARSE environment variable
  - remove DEPRECATED register_tag_processor(DBIx::Custom)
  - remove DEPRECATED register_tag(DBIx::Custom)
  - remove DEPRECATED prepend method(DBIx::Custom::Order) array reference receiving
  - remove DEPRECATED remote_end_filter(DIBx::Custom::Result)
  - remote DEPRECATED remove_filter(DIBx::Custom::Result)
  - remove DEPRECATED filter_on(DBIx::Custom::Result)
  - remove DEPRECATED filter_off(DBIx::Custom::Result)
  - remove DEPRECATED end_filter(DBIx::Custom::Result)
  - remove DEPRECATED filter_check(DBIx::Custom::Result)
  - remove DEPRECATED column(DBIx::Custom::Result)
  - remove DEPRECATED fetch_first(DBIx::Custom::Result)
  - remove DEPRECATED fetch_hash_first(DBIx::Custom::Result)
  - remove DEPRECATED execute(DBIx::Custom::Model)
  - remove DEPRECATED method(DBIx::Custom::Model)
  - remove DEPRECATED filter(DBIx::Custom::Model)
  - remove DEPRECATED name(DBIx::Custom::Model)
  - remove DEPRECATED type(DBIx::Custom::Model)
  - remove DEPRECATED DBIX_CUSTOM_DISABLE_MODEL_EXECUTE environment variable
  - remove DEPRECATED default_dbi_option(DBIx::Custom)
  - remove DEPRECATED dbi_option(DBIx::Custom)
  - remove DEPRECATED data_source(DBIx::Custom)
  - remove DEPRECATED dbi_options(DBIx::Custom)
  - remove DEPRECATED filter_check(DBIx::Custom)
  - remove DEPRECATED reserved_word_quote(DBIx::Custom)
  - remove DEPRECATED select_at(DBIx::Custom)